kaua foi embora

--- a/src/detalhe-produto-filtro/filtro-2/index.scss
+++ b/src/detalhe-produto-filtro/filtro-2/index.scss
@@ -8,7 +8,25 @@
   background-color: none;
   display: flex;
   flex-direction: row;
-  margin-top: 50px;
+  margin-top: 55px;
+  gap: 38px;
+
+
+
+  p{
+  
+    margin-left: 25px;
+  }
+  h4{
+    margin-left: 25px;
+  }
+}
+
+
+.adetalheproduto{
+  text-decoration: none;
+  color: #000;
+  
 }
 
 .adetalhes{
