--- a/src/cabecalho/index.scss
+++ b/src/cabecalho/index.scss
@@ -2,7 +2,10 @@
     display: flex;
     flex-direction: column;
 
+    span{
+        font-family:  'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
 
+    }
 
     .cor{
         color: #fff;
@@ -23,6 +26,13 @@
     cursor: pointer;
     transition: 0.7s;
     width: 180px;
+}
+
+
+.sair-conta:hover {
+background-color: #fff;
+border: 10px solid #000;
+color: red !important;
 }
 
     .sair-conta:hover{
