--- a/src/produtos/index.scss
+++ b/src/produtos/index.scss
@@ -39,7 +39,14 @@
             color: #fff;
             align-items: center;
             margin-left: 35px;    
-            margin-bottom: 100px;           
+            margin-bottom: 100px;   
+            margin-top: 100px;
+            h3{
+                color: #000;
+                font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+                font-size: 30px;
+                font-weight: bold;
+            }
         }
 
         #filtro{
@@ -112,7 +119,7 @@
         }
 
         .divis{
-            margin-top: 0px;
+            margin-top: -200px;
             gap: 50px;
             display: flex;
             flex-direction: row;
@@ -155,9 +162,7 @@
             width: 15vw;
         }
 
-        .fim{
-            margin-top: 25px;
-        }
+        
     }
 
     .fundo-virado{
