--- a/src/ABC---PAGES---ADM/cadastro-produto/index.scss
+++ b/src/ABC---PAGES---ADM/cadastro-produto/index.scss
@@ -10,7 +10,7 @@ flex-direction: row;
     display: flex;
     flex-direction:column;
 
-    width: 400px ;
+    width: 350px ;
     height: 130vh;
     background-color: #1A417C;
 
@@ -108,12 +108,13 @@ background-color: rgb(56, 69, 255);
   .d9 {
     display: flex;
     flex-direction: column;
+    padding-top: 80px;
     justify-content: center;
     align-items: center;
     background-size: cover;
-    background-color: red;
+    background-color: rgb(189, 189, 189);
     width: 106vh;
-    height: 115vh;
+    height: 155vh;
 
 
 
@@ -122,7 +123,7 @@ background-color: rgb(56, 69, 255);
       border-collapse: separate;
       border-spacing: 0px 10px;
       font-size: 18px ;
-      padding: 30px;
+      padding: 0px;
 
 }
 
@@ -132,11 +133,9 @@ background-color: rgb(56, 69, 255);
     width: 91%;
 
     img{
-      width: 35px;
-      height: 50px;
-      cursor: pointer;
-      margin-left: 20px;
+      width: 47px;
     }
+    
   }
 
   .tabelas::-webkit-scrollbar{
@@ -162,7 +161,8 @@ background-color: rgb(56, 69, 255);
 
   tbody{  
     background-color: #fff;
-    width: 100%;
+    width: 60%;
+
 
     .lado {
       display: flex;
@@ -173,9 +173,9 @@ background-color: rgb(56, 69, 255);
   td{
     border-top: 1px solid #000000;
     border-bottom: 1px solid #000000;
-    padding: 6px 81px;
+    padding: 6px 50px;
     color: #000000;
-    font-family: 'inter';
+
     font-size: 20px;
   }
 
@@ -198,8 +198,9 @@ background-color: rgb(56, 69, 255);
     .h1-button {
      display: flex;
      flex-direction: column;
-     margin-right: 820px;
-     margin-left: 100px;
+     margin-right: 572px;
+     margin-bottom: 30px;
+
 
      h1{
       font-size: 46px;
@@ -243,10 +244,10 @@ background-color: rgb(56, 69, 255);
     .d8{
         display: flex;
         flex-direction: column;
-
-        padding: 90px 10px 10px 105px;
+        justify-content: center;
         width: 45vw;
-        height: 60vh;
+        padding: 10px 1px 1px 45px;
+        height: 150vh !important;
         background-color: #D9D9D9;
         box-shadow:1px 1px 10px 1px #818181;
         border-radius: 20px;
@@ -259,11 +260,12 @@ background-color: rgb(56, 69, 255);
         .input-4 {
             display: flex;
             flex-direction: column;
-            justify-content: flex-end;
+            justify-content: center;  
          
             .salvar-alterar {
               display: flex;
               flex-direction: column;
+              justify-content: start;
             }
 
             .salvar {
@@ -273,7 +275,7 @@ background-color: rgb(56, 69, 255);
               width: 300px;
               margin-bottom: 10px;
               color: white;
-              margin-left: 180px;
+              margin-left: 85px;
               border-radius: 5px;
               font-size: 22px;
             }
