--- a/src/ABC---PAGES---ADM/cadastro-produto/index.scss
+++ b/src/ABC---PAGES---ADM/cadastro-produto/index.scss
@@ -112,9 +112,10 @@ background-color: rgb(56, 69, 255);
     justify-content: center;
     align-items: center;
     background-size: cover;
-    background-color: rgb(189, 189, 189);
+    // background-color: rgb(189, 189, 189);
     width: 106vh;
-    height: 155vh;
+    background-color: red;
+    height: 115vh;
 
 
 
@@ -261,7 +262,6 @@ background-color: rgb(56, 69, 255);
             display: flex;
             flex-direction: column;
             justify-content: center;  
-         
             .salvar-alterar {
               display: flex;
               flex-direction: column;
@@ -325,7 +325,7 @@ background-color: rgb(56, 69, 255);
 
 
 
-@media (max-width:1280){
+@media (max-width:1000){
   nav{
     width: auto;
   }
@@ -334,5 +334,9 @@ background-color: rgb(56, 69, 255);
     justify-content: center;
     align-items: center;
     width: 1500px;
+  }
+
+  input{
+    width: 100px;
   }
 }
